[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of Transfers in the SAFE Network."
documentation = "https://docs.rs/safe-transfers"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "safe-transfers"
readme = "README.md"
repository = "https://github.com/maidsafe/safe-transfers"
version = "0.1.0"

[dependencies]
# # Ensure bincode version is identical to that in SAFE Client Libs and SAFE Network Data.
bincode = "1.2.1"
safe-nd = { git = "https://github.com/maidsafe/safe-nd.git", branch = "farming" }
serde = { version = "1.0.97", features = ["derive"] }
crdts = "4.1.0"
threshold_crypto = "~0.4.0"
rand = "~0.7.3"
itertools = "~0.9.0"
log = "~0.4.8"
xor_name = {git="https://github.com/joshuef/xor-name.git", branch="AddRandom"}

[dev_dependencies]

[features]
simulated-payouts = ["safe-nd/simulated-payouts"]