[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Implementation of Transfers in the Safe Network."
documentation = "https://docs.rs/sn_transfers"
edition = "2018"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "sn_transfers"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_transfers"
version = "0.2.4"

[dependencies]
bincode = "1.2.1"
# sn_data_types = { path = "../sn_data_types" }
sn_data_types = { git = "https://github.com/oetyng/sn_data_types", branch = "refactor-chunk-duplication" }
crdts = "4.3.0"
threshold_crypto = "~0.4.0"
rand = "~0.7.3"
itertools = "~0.9.0"
log = "~0.4.8"
xor_name = "1.1.3"

[dependencies.serde]
version = "1.0.97"
features = [ "derive" ]

[features]
simulated-payouts = [ "sn_data_types/simulated-payouts" ]
